commit gc